[package]
name = "beanie_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
mexprp = "0.3.1"
rand = "0.8.5"
rug = "1.19.1"
pgfplots = { version = "0.5.1", features = ["tectonic"] }
tectonic = { version = "0.12.0", features = ["native-tls-vendored"]}
tree-sitter-beanie = { path = "tree-sitter-beanie" }
regex = "1.7.1"
